--- a/css/templatemo-first-portfolio-style.css
+++ b/css/templatemo-first-portfolio-style.css
@@ -2,7 +2,7 @@
 :root {
   --white-color:                  #ffffff;
   --primary-color:                #051005;
-  --secondary-color:              #156415;
+  --secondary-color:              #8EB69B;
   --section-bg-color:             #f9f9f9;
   --dark-color:                   #000000;
   --p-color:                      #717275;
