--- a/css/templatemo-first-portfolio-style.css
+++ b/css/templatemo-first-portfolio-style.css
@@ -510,9 +510,12 @@ strong {
 .hero-image {
   position: absolute;
   z-index: 20;
-  top: 10;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   width: 100%;
   min-width: 550px;
+  max-width: 550px;
 }
 
 .hero svg {
