--- a/css/templatemo-first-portfolio-style.css
+++ b/css/templatemo-first-portfolio-style.css
@@ -509,13 +509,10 @@ strong {
 
 .hero-image {
   position: absolute;
-  z-index: 20;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  z-index: 22;
+  top: 0;
   width: 100%;
-  min-width: 100%;
-  max-width: 100%;
+  min-width: 550px;
 }
 
 .hero svg {
