--- a/css/templatemo-first-portfolio-style.css
+++ b/css/templatemo-first-portfolio-style.css
@@ -500,7 +500,7 @@ strong {
   height: 350px;
   position: absolute;
   z-index: 22;
-  top: -50px;
+  top: 50px;
   right: 0;
   left: 0;
   margin: auto;
@@ -510,9 +510,9 @@ strong {
 .hero-image {
   position: absolute;
   z-index: 22;
-  top: 0;
+  top: 50%;
   width: 100%;
-  min-width: 550px;
+  min-width: 100%;
 }
 
 .hero svg {
