--- a/css/templatemo-first-portfolio-style.css
+++ b/css/templatemo-first-portfolio-style.css
@@ -526,6 +526,13 @@ strong {
   pointer-events: none;
 }
 
+.hero-image img {
+  border-radius: 50%;
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
 
 /*---------------------------------------
   ABOUT              
