--- a/css/templatemo-first-portfolio-style.css
+++ b/css/templatemo-first-portfolio-style.css
@@ -496,14 +496,11 @@ strong {
 .hero-image-wrap {
   background: var(--white-color);
   border-radius: 100%;
-  width: 300px;
-  height: 300px;
+  width: 350px;
+  height: 350px;
   position: absolute;
   z-index: 22;
-  top: 50px;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  pointer-events: none;
+  top: -50px;
   right: 0;
   left: 0;
   margin: auto;
@@ -511,20 +508,11 @@ strong {
 }
 
 .hero-image {
-  position: relative;
+  position: absolute;
   z-index: 22;
-  top: 50%;
+  top: 0;
   width: 100%;
-  max-width: 100%;
-  padding-bottom: 100%;
-}
-
-.hero-image img {
-  border-radius: 50%;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  display: block;
+  min-width: 550px;
 }
 
 .hero svg {
