--- a/css/templatemo-first-portfolio-style.css
+++ b/css/templatemo-first-portfolio-style.css
@@ -495,7 +495,7 @@ strong {
 
 .hero-image-wrap {
   background: var(--white-color);
-  border-radius: 0;
+  border-radius: 0 !important;
   width: 350px;
   height: 350px;
   position: relative;
