--- a/css/templatemo-first-portfolio-style.css
+++ b/css/templatemo-first-portfolio-style.css
@@ -495,19 +495,20 @@ strong {
 
 .hero-image-wrap {
   background: var(--white-color);
-  border-radius: 0 !important;
+  border-radius: 0;
   width: 250px;
   height: 250px;
   position: relative;
   z-index: 22;
   margin: auto;
+  top: -20px;
   pointer-events: none;
 }
 
 .hero-image {
   position: absolute;
   z-index: 22;
-  top: 0;
+  top: -10px;
   width: 100%;
   max-width: 550px;
 }
