--- a/css/templatemo-first-portfolio-style.css
+++ b/css/templatemo-first-portfolio-style.css
@@ -495,22 +495,24 @@ strong {
 
 .hero-image-wrap {
   background: var(--white-color);
-  border-radius: 0;
-  width: 250px;
-  height: 250px;
-  position: relative;
+  border-radius: 100%;
+  width: 350px;
+  height: 350px;
+  position: absolute;
   z-index: 22;
+  top: -50px;
+  right: 0;
+  left: 0;
   margin: auto;
-  top: -20px;
   pointer-events: none;
 }
 
 .hero-image {
   position: absolute;
   z-index: 22;
-  top: -50px;
+  top: 0;
   width: 100%;
-  max-width: 550px;
+  min-width: 550px;
 }
 
 .hero svg {
@@ -523,7 +525,6 @@ strong {
   height: 100%;
   pointer-events: none;
 }
-
 
 
 /*---------------------------------------
